<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/profileView_backbtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:background="@drawable/vector_back"
        android:backgroundTint="@color/google_red"/>

    <ImageButton
        android:id="@+id/profileView_setting"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/vector_threedots"
        android:backgroundTint="@color/google_red"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_below="@+id/profileView_setting"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:elevation="2dp"
        app:civ_border_color="@color/light_grey_background"
        app:civ_border_width="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connection"
        android:gravity="center"
        android:layout_marginTop="7dp"
        android:layout_below="@id/profile_photo"
        android:weightSum="2">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:backgroundTint="@color/google_red"
            android:layout_marginRight="10dp"
            android:background="@drawable/vector_chats"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:background="@color/light_grey"/>

        <FrameLayout
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            >

            <ImageButton
                android:id="@+id/AddConnection"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/vector_addperson"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/RemoveConnection"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/vector_connected"
                android:visibility="visible" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/profile_honor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection"
        android:gravity="center_horizontal"
        android:textColor="@color/google_red"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_honor"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/profile_description"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_clicks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clicks2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_clicks"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_connections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_connections"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_stars"
                android:textColor="@color/dark_grey"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
